# unbroken_qa_capture

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LINEAR_INTEGRATION.md  NEXT_SESSION.md  PROJECT.md  README.md  Unbroken_QA_Capture_PRD.md  create-ticket.mjs  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  verify.sh  vite.config.ts  vitest.config.ts
__tests__/: App.test.ts  counter.test.ts  css-antipatterns.test.ts  hotkey-events.test.ts  main.test.ts  quasar-rendering-sanity.test.ts
__tests__/__snapshots__/: main.test.ts.snap
__tests__/components/: AnnotatorContent.test.ts  FirstRunWizard.test.ts  QuickNotepad.test.ts  ScreenshotAnnotator.test.ts  SessionNotepad.test.ts  SessionStatusWidget.test.ts  SessionToolbar.test.ts  VideoPlayer.test.ts
__tests__/contracts/: backend-types.test.ts  tauri-command-registration.test.ts
__tests__/contracts/__snapshots__/: tauri-command-registration.test.ts.snap
__tests__/integration/: session-lifecycle.test.ts
__tests__/stores/: bug.test.ts  profile.test.ts  session.test.ts  settings.test.ts  tray.test.ts
__tests__/views/: ActiveSessionView.test.ts  AnnotateView.test.ts  BugDetail.test.ts  HelpView.test.ts  Home.test.ts  IdleView.test.ts  SessionReview.test.ts  Settings.test.ts
docs/: USER_GUIDE.md
regression/: README.md
scripts/: check-commands.sh  smoke-test.mjs  swarm-pull.ps1
src/: App.vue  main.ts  quasar-variables.sass
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.png.placeholder
src-tauri/src/: capture_watcher.rs  clipboard_watcher.rs  hotkey.rs  hotkey_tests.rs  lib.rs  main.rs  session_json.rs  session_manager.rs  session_summary.rs  template.rs
src-tauri/src/claude_cli/: mod.rs  prompts.rs  subprocess.rs  tests.rs  types.rs
src-tauri/src/database/: bug.rs  capture.rs  mod.rs  models.rs  schema.rs  session.rs  settings.rs  state.rs
src-tauri/src/hotkey/: README.md
src-tauri/src/platform/: SCREENSHOT_TRIGGER.md  capture.rs  error.rs  macos.rs  mod.rs  registry.rs  registry_cache.rs  windows.rs
src-tauri/src/profile/: mod.rs  repository.rs  seed.rs  types.rs
src-tauri/src/ticketing/: README.md  linear.rs  mod.rs  tests.rs  trait_def.rs  types.rs
src-tauri/templates/: default_template.md
src-tauri/tests/: screenshot_trigger_integration.rs  session_lifecycle_integration.rs
src/api/: tauri.ts
src/components/: AnnotatorContent.vue  FirstRunWizard.vue  QuickNotepad.vue  ScreenshotAnnotator.vue  SessionNotepad.vue  SessionStatusWidget.vue  SessionToolbar.vue  VideoPlayer.vue
src/composables/: useCaptureEventHandler.ts
src/router/: index.ts
src/stores/: bug.ts  capture.ts  counter.ts  index.ts  profile.ts  session.ts  settings.ts  tray.ts
src/types/: backend.ts
src/utils/: paths.ts
src/views/: ActiveSessionView.vue  AnnotateView.vue  BugDetail.vue  HelpView.vue  Home.vue  IdleView.vue  SessionNotesView.vue  SessionReview.vue  Settings.vue
testing-sessions/: README.md
