[package]
name = "unbroken-qa-capture"
version = "0.1.0"
description = "QA Capture Tool for Unbroken Technology"
authors = ["Unbroken Technology"]
edition = "2021"

[lib]
name = "unbroken_qa_capture_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.3", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6.1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
